tester/src/test/aya/failure/patterns/issue355.aya.txt
In file $FILE:7:5 ->

  5 |  | suc Nat
  6 | 
  7 | \def addN (a : I) : Nat
           ^--^
  
Error: Cannot match over "Interval" primary type: `left`, see https://agda.readthedocs.io/en/v2.6.1.3/language/cubical.html#the-interval-and-path-types for reason.
Tycking interrupted due to errors.
What are you doing?
